# project

./: .envrc  .gitignore  Anchor.toml  Cargo.toml  README.md  flake.nix
.clinerules/: todo-list.md  ui-theme.json  ui-theme.jsonc  web-ui.md
programs/anchor-voting/: Cargo.toml
programs/anchor-voting/src/: lib.rs
programs/anchor_init/: Cargo.toml
programs/anchor_init/src/: lib.rs
programs/dump.fun/: Cargo.toml
programs/dump.fun/src/: lib.rs
programs/escrow/: Cargo.toml
programs/escrow-2/src/: lib.rs
programs/escrow/src/: error.rs  lib.rs
programs/escrow/src/handlers/: make_offer.rs  refund_offer.rs  take_offer.rs
programs/escrow/src/state/: offer.rs
programs/lottery/: Cargo.toml
programs/lottery/src/: lib.rs
programs/lottery/tests/: master_pda.rs
programs/staking/src/: lib.rs
programs/voting/src/: lib.rs
tests/: anchor_init.ts  voting.ts
web-app/: astro.config.mjs  package-lock.json  package.json  panda.config.ts  tsconfig.json
web-app/src/: Layout.tsx  connectcontext.tsx  main.tsx
web-app/src/atoms/: Button.tsx  Card.ts  layout.tsx  text.ts  text.tsx
web-app/src/components/: AppLayout.tsx  ClientApp.tsx  Connect.tsx  Counter.jsx  Counter.tsx  Header.astro  LayoutComponents.tsx  Lottery.tsx  Navbar.astro  Voting.tsx  WalletProvider.astro
web-app/src/components/atoms/: Card.ts
web-app/src/layouts/: AstroLayout.astro  Layout.astro
web-app/src/page-parts/: Counter.tsx  DumpFun.tsx  Escrow.tsx  Lottery.tsx  Staking.tsx  Voting.tsx
web-app/src/pages/: counter.astro  index.astro  voting.astro
