[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1


[workspace.dependencies]
# anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
# anchor-spl = { version = "0.30.1", features = ["associated_token"] }
# litesvm = "0.2.1"
# solana-program = "1.18"
# solana-sdk = "1.18"
anchor-lang = "0.31.1"
anchor-spl = { version="0.31.1", features=["metadata"]}
litesvm = "0.6.1"
solana-keypair = "2.2.0" 
solana-message = "2.2.0"
solana-system-interface = "1.0.0"
solana-transaction = "2.2.0"
solana-pubkey = "2.2.0"
solana-signer = "2.2.0"
solana-instruction = "2.2.0"
solana-program = "2.2.0"
spl-token = "8.0.0"
spl-token-2022 = { version = "8.0.1", features = ["no-entrypoint"] }
