[package]
name = "escrow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]


[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true

[dev-dependencies]
litesvm.workspace = true
solana-keypair.workspace = true
solana-message.workspace = true
solana-system-interface.workspace = true
solana-transaction.workspace = true
solana-pubkey.workspace = true
solana-signer.workspace = true
# solana-instruction.workspace = true
# solana-program.workspace = true
# solana-sdk.workspace = true
# spl-token.workspace = true
# spl-token-2022.workspace = true

